--- a/privacy.html
+++ b/privacy.html
@@ -20,7 +20,7 @@
 
 <h1>MyBalance Privacy Policy</h1>
 
-<p>Effective date: [ADD DATE]</p>
+<p>Effective date: 2/17/2026</p>
 
 <p>
 MyBalance is a personal finance summary application that helps users view
@@ -75,11 +75,6 @@ Users may request deletion of their data at any time.
   <li>You may request data deletion by contacting support.</li>
 </ul>
 
-<h2>Contact</h2>
-<p>
-If you have questions about this policy or wish to request data removal,
-contact: <strong>YOUR_EMAIL_HERE</strong>
-</p>
 
 <h2>Changes</h2>
 <p>
